frontend/test/should_fail/computations_no_proc_methodb.grg
using computations_no_proc_methodb;

procedure foo()
{
	return;
}
